--- a/Web/Views/Puesto/Details.cshtml
+++ b/Web/Views/Puesto/Details.cshtml
@@ -63,13 +63,17 @@
                 </div>
             </div>
             <div class="card-footer">
-                <div class="float-right">
-                    <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Edit","Puesto", new { id = Model.Id })">
-                        <i class="fas fa-pencil-alt">
-                        </i>
-                        Editar
-                    </a>
-                </div>
+                @if (UsuarioLogueado.Rol.Id == 1)
+                {
+                    <div class="float-right">
+                        <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Edit","Puesto", new { id = Model.Id })">
+                            <i class="fas fa-pencil-alt">
+                            </i>
+                            Editar
+                        </a>
+                    </div>
+                }
+
 
             </div>
         </div>
