--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     @RenderSection("styles", required: false)
     @Styles.Render("~/Content/adminlte")
     @Styles.Render("~/Content/sweetalert")
+    <link rel="stylesheet" href="~/Content/dist/css/tooltip.css" />
 </head>
 <body class="hold-transition sidebar-mini layout-fixed sidebar-collapse">
 
