--- a/Web/Views/Shared/_MenuIntegrante.cshtml
+++ b/Web/Views/Shared/_MenuIntegrante.cshtml
@@ -45,6 +45,14 @@
                         </p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="@Url.Action("Index","Usuario")" class="nav-link" id="menuusuarios">
+                        <i class="nav-icon fas fa-users"></i>
+                        <p>
+                            Usuarios
+                        </p>
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
