--- a/Web/Views/Usuario/ChangePassNewUser.cshtml
+++ b/Web/Views/Usuario/ChangePassNewUser.cshtml
@@ -84,6 +84,7 @@
     })
 
     $(document).ready(function () {
+        $('#NewClave').val('');
         $("#botonAceptar").attr('disabled', 'disabled');
         //$("#botonAceptar").addClass('btn-primary-disabled');
         $("#botonAceptar").addClass('acceptBtnDisabled');
