--- a/Web/Views/Categoria/Index.cshtml
+++ b/Web/Views/Categoria/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<Infraestructure.Models.Categoria>
+@{ Infraestructure.Models.Usuario UsuarioLogueado = (Infraestructure.Models.Usuario)Session["User"]; }
 @{
     ViewBag.Title = "Categorías de Puestos";
 }
@@ -24,12 +25,17 @@
     </div><!-- /.container-fluid -->
 </div>
 
-<p>
-    <a class="btn btn-primary" href="@Url.Action("Create", "Categoria")">
-        <i class="fa fa-plus mr-2"></i>
-        Nueva categoría
-    </a>
-</p>
+
+@if (UsuarioLogueado.IdRol == 1)
+{
+    <p class="tooltip--right" data-tooltip="Crea una nueva categoría">
+        <a class="btn btn-primary" href="@Url.Action("Create", "Categoria")">
+            <i class="fa fa-plus mr-2"></i>
+            Nueva categoría
+        </a>
+    </p>
+}
+
 
 <!-- Main content -->
 <section class="content">
@@ -71,27 +77,42 @@
                                         </td>
                                         <td class="text-center ">
                                             <ul style="display:flex; list-style:none">
-                                                <li>
-                                                    <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Details","Categoria", new { id = item.Id })">
-                                                        <i class="fas fa-eye">
-                                                        </i>
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Edit","Categoria", new { id = item.Id })">
-                                                        <i class="fas fa-pencil-alt">
-                                                        </i>
-                                                    </a>
-                                                </li>
-                                                <li>
 
-                                                    <a class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)">
-                                                        <i class="fas fa-ban">
-                                                        </i>
-                                                    </a>
-
-
+                                                <li>
+                                                    <p class="tooltip--triangle" data-tooltip="Ver detalles de la categoría">
+                                                        <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Details","Categoria", new { id = item.Id })">
+                                                            <i class="fas fa-eye">
+                                                            </i>
+                                                        </a>
+                                                    </p>
+                                                    
                                                 </li>
+
+                                                @if (UsuarioLogueado.IdRol == 1)
+                                                {
+                                                    <li>
+                                                        <p class="tooltip--triangle" data-tooltip="Editar la categoría">
+                                                            <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Edit","Categoria", new { id = item.Id })">
+                                                                <i class="fas fa-pencil-alt">
+                                                                </i>
+                                                            </a>
+                                                        </p>
+
+                                                        
+                                                    </li>
+                                                    <li>
+                                                        <p class="tooltip--triangle" data-tooltip="Desactivar la categoría">
+                                                            <a class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)">
+                                                                <i class="fas fa-ban">
+                                                                </i>
+                                                            </a>
+                                                        </p>
+                                                        
+
+
+                                                    </li>
+                                                }
+
 
 
                                             </ul>
