--- a/Web/Views/Recuperacion/Recovery.cshtml
+++ b/Web/Views/Recuperacion/Recovery.cshtml
@@ -83,6 +83,7 @@
     })
 
     $(document).ready(function () {
+        $('#NewClave').val('');
         $("#botonAceptar").attr('disabled', 'disabled');
         //$("#botonAceptar").addClass('btn-primary-disabled');
         $("#botonAceptar").addClass('acceptBtnDisabled');
@@ -207,5 +208,13 @@
     }
 
 </script>
+
+
+
+
+
+
+
+
 @Scripts.Render("~/bundles/jqueryval")
 
