--- a/Web/Views/Usuario/Index.cshtml
+++ b/Web/Views/Usuario/Index.cshtml
@@ -30,9 +30,9 @@
 </div>
 
 @{
-    if (UsuarioLogueado != null && UsuarioLogueado.Rol.Id == 1)
+    if (UsuarioLogueado != null && UsuarioLogueado.IdRol == 1)
     {
-        <p>
+        <p class="tooltip--right" data-tooltip="Crea un nuevo usuario">
             <a class="btn btn-primary" href="@Url.Action("Create", "Usuario")">
                 <i class="fa fa-plus"></i>
                 Nuevo Usuario
@@ -69,83 +69,103 @@
                                     <th>
                                         @Html.DisplayNameFor(model => model.Rol.Descripcion)
                                     </th>
-                                    <th class="notexport" style="text-align:center"></th>
+                                    @if (UsuarioLogueado.IdRol == 1)
+                                    {
+                                        <th class="notexport" style="text-align:center"></th>
+                                    }
+
                                 </tr>
                             </thead>
                             <tbody>
                                 @foreach (var item in Model)
                                 {
 
-                                    <tr>
-                                        <td>
-                                            @if (item.Foto != null)
-                                            {
-                                                <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(item.Foto)" class="img-circle elevation-2" alt="User Image" style="height: 34px; width:34px"> }
-                                            else
-                                            {
-                                                <img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">
-                                            }
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Id)
-                                        </td>
+                                <tr>
+                                    <td>
+                                        @if (item.Foto != null)
+                                        {
+                                            <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(item.Foto)" class="img-circle elevation-2" alt="User Image" style="height: 34px; width:34px"> }
+                                        else
+                                        {
+                                            <img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">
+                                        }
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Id)
+                                    </td>
 
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.NombreCompleto)
-                                            @if (UsuarioLogueado != null && item.Id == UsuarioLogueado.Id)
-                                            {
-                                                <span class="right badge badge-primary ml-5">Tú</span>
-                                            }
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.NombreCompleto)
+                                        @if (UsuarioLogueado != null && item.Id == UsuarioLogueado.Id)
+                                        {
+                                            <span class="right badge badge-primary ml-5">Tú</span>
+                                        }
 
-                                        </td>
+                                    </td>
 
-                                        <td class="text-center">
-                                            @if (item.Estado)
-                                            {
-                                                <h5><span class="right badge badge-pill badge-success">Activo</span></h5>
-                                            }
-                                            else
-                                            {
-                                                <h5><span class="right badge badge-pill badge-danger">Inactivo</span></h5>
-                                            }
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Rol.Descripcion)
-                                        </td>
-                                        <td class="text-center ">
-                                            <ul style="display:flex; list-style:none">
-                                                <li>
+                                    <td class="text-center">
+                                        @if (item.Estado)
+                                        {
+                                            <h5><span class="right badge badge-pill badge-success">Activo</span></h5>
+                                        }
+                                        else
+                                        {
+                                            <h5><span class="right badge badge-pill badge-danger">Inactivo</span></h5>
+                                        }
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Rol.Descripcion)
+                                    </td>
+
+                                    @if (UsuarioLogueado.IdRol == 1 )
+                                    {
+
+                                <td class="text-center ">
+                                    @if (UsuarioLogueado.Id != item.Id)
+                                    {
+                                        <ul style="display:flex; list-style:none">
+                                            <li>
+                                                <p class="tooltip--triangle" data-tooltip="Ver detalles del usuario">
                                                     <a class="btn btn-info btn-sm mr-1" href="@Url.Action("Details", "Usuario", new { id = item.Id })">
                                                         <i class="fas fa-eye">
                                                         </i>
                                                     </a>
-                                                </li>
+                                                </p>
 
-                                                @{ if (UsuarioLogueado != null && UsuarioLogueado.Rol.Descripcion != "Integrante")
-                                                    {
-                                                        <li>
-                                                            <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit", "Usuario", new { id = item.Id })">
-                                                                <i class="fas fa-user-edit">
-                                                                </i>
-                                                            </a>
-                                                        </li>
-                                                    } }
-                                                @{ if (UsuarioLogueado != null && UsuarioLogueado.Rol.Descripcion != "Integrante")
-                                                    {
+                                            </li>
+                                            <li>
+                                                <p class="tooltip--triangle" data-tooltip="Editar el usuario">
+                                                    <a class="btn btn-primary btn-sm mr-1" href="@Url.Action("Edit", "Usuario", new { id = item.Id })">
+                                                        <i class="fas fa-user-edit">
+                                                        </i>
+                                                    </a>
+                                                </p>
+
+                                            </li>
+                                            <li>
+                                                <p class="tooltip--triangle" data-tooltip="Desactivar el usuario">
+                                                    <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
+                                                        <i class="fas fa-ban"></i>
+                                                    </a>
+                                                </p>
+
+                                            </li>
+                                        </ul>
+                                    }
+                                    else
+                                    {
+                                        <p class="tooltip--triangle" data-tooltip="Ir a perfil">
+                                            <a  class="btn btn-success btn-sm" href="@Url.Action("UserProfile","Usuario")">
+                                                <i class="fas fa-user"></i>
+                                            </a>
+                                        </p>
+                                    }
+
+                                </td>
+                                    }
 
 
-                                                        <li>
-                                                            <a id="botonEliminar" class="btn btn-danger btn-sm" onclick="eliminar(@item.Id)" href="#">
-                                                                <i class="fas fa-ban"></i>
-                                                            </a>
-                                                        </li>
-
-
-
-                                                    } }
-                                            </ul>
-                                        </td>
-                                    </tr>
+                                </tr>
                                 }
                             </tbody>
                         </table>
