--- a/Web/Views/Usuario/UserProfile.cshtml
+++ b/Web/Views/Usuario/UserProfile.cshtml
@@ -22,6 +22,34 @@
         </div><!-- /.row -->
     </div><!-- /.container-fluid -->
 </div>
+<style>
+    #example {
+        background-repeat: repeat-x;
+        /*
+        margin-left: 20px;
+        margin-top: 13px;
+        */
+    }
+
+        #example .but1 {
+            line-height: 0px;
+            margin-top: 0px;
+            margin-left: 0px;
+            margin-right: 0px;
+            display: inline-block;
+            position: relative;
+            margin-bottom: 30px
+        }
+
+            #example .but1 a {
+                position: absolute;
+                color: white
+                /*
+                top: 5px;
+                left: 5px;
+                */
+            }
+</style>
 
 
 
@@ -34,11 +62,35 @@
                 <div class="text-center">
                     @if (Model.Foto != null)
                     {
-                        <img src="data:image/jpeg;charset=utf-8;base64,
-                                         @Convert.ToBase64String(Model.Foto)"
-                             id="ImagenUsuario"
-                             class="profile-user-img img-fluid  img-circle"
-                             style="height: 200px; width:200px" />
+
+
+                        <div id="example">
+                            <div class="but1">
+                                <!--Card image-->
+                                <img class="profile-user-img img-fluid img-circle"
+                                     src="data:image/jpeg;charset=utf-8;base64,
+                                    @Convert.ToBase64String(Model.Foto)"
+                                     alt="user image"
+                                     style="height: 200px; width:200px">
+                                <!--/.Card image-->
+                                <a href="#" onclick="quitarFoto()" class="badge-pill badge badge-secondary">Quitar imagen</a>
+                            </div>
+                        </div>
+
+
+
+                        @*
+                   <img src="data:image/jpeg;charset=utf-8;base64,
+                @Convert.ToBase64String(Model.Foto)"
+                    id="ImagenUsuario"
+                    class="profile-user-img img-fluid img-circle"
+                    style="height: 200px; width:200px" />
+                        *@
+
+
+
+
+
                     }
                     else
                     {
@@ -48,10 +100,10 @@
                     }
 
                 </div>
-
                 <h3 class="profile-username text-center">@Model.NombreCompleto</h3>
-
-                <p class="text-muted text-center">@Model.Rol.Descripcion</p>
+                <center>
+                    <p class="text-muted text-center">@Model.Rol.Descripcion</p>
+                </center>
                 <ul class="list-group list-group-unbordered mb-3">
                     <li class="list-group-item">
                         <b>@Html.DisplayNameFor(model => model.Id)</b> <a class="float-right">@Html.DisplayFor(model => model.Id)</a>
@@ -187,44 +239,44 @@
     <div class="modal-dialog">
         <div class="modal-content">
 
-                <div class="modal-header">
-                    <h4 class="modal-title">Editar clave</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group row">
-                        <label class="col-sm-2 control-label col-md-2">Clave</label>
-                        <div class="col-md-10">
-                            <input id="pass" type="password" class="form-control" />
-                            <p class="text-danger" id="errorPass"></p>
-                        </div>  
+            <div class="modal-header">
+                <h4 class="modal-title">Editar clave</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group row">
+                    <label class="col-sm-2 control-label col-md-2">Clave</label>
+                    <div class="col-md-10">
+                        <input id="pass" type="password" class="form-control" />
+                        <p class="text-danger" id="errorPass"></p>
                     </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 control-label col-md-2">Confirmar</label>
-                        <div class="col-md-10">
-                            <input id="confirmPass" type="password" class="form-control" />
-                            <p class="text-danger" id="errorConfirmPass"></p>
-                        </div> 
-                    </div>
-                    <ul>
-                        <li>Entre 9 y 25 caracteres.</li>
-                        <li>Al menos una mayúscula.</li>
-                        <li>Al menos una minúscula.</li>
-                        <li>Al menos un caracter especial.</li>
-                        <li>Al menos un número.</li>
-                    </ul>
                 </div>
-                <div class="modal-footer justify-content-end">
+                <div class="form-group row">
+                    <label class="col-sm-2 control-label col-md-2">Confirmar</label>
+                    <div class="col-md-10">
+                        <input id="confirmPass" type="password" class="form-control" />
+                        <p class="text-danger" id="errorConfirmPass"></p>
+                    </div>
+                </div>
+                <ul>
+                    <li>Entre 9 y 25 caracteres.</li>
+                    <li>Al menos una mayúscula.</li>
+                    <li>Al menos una minúscula.</li>
+                    <li>Al menos un caracter especial.</li>
+                    <li>Al menos un número.</li>
+                </ul>
+            </div>
+            <div class="modal-footer justify-content-end">
 
-                    <button class="btn btn-danger btn-sm " data-dismiss="modal">
-                        <span class="glyphicon glyphicon-remove"></span> Cancelar
-                    </button>
-                    <button class="btn btn-success btn-sm" type="button" style="margin-right:5px;" id="btnCambiarClave">
-                        <span class="glyphicon glyphicon-pencil" ></span> Guardar
-                    </button>
-                </div>
+                <button class="btn btn-danger btn-sm " data-dismiss="modal">
+                    <span class="glyphicon glyphicon-remove"></span> Cancelar
+                </button>
+                <button class="btn btn-success btn-sm" type="button" style="margin-right:5px;" id="btnCambiarClave">
+                    <span class="glyphicon glyphicon-pencil"></span> Guardar
+                </button>
+            </div>
 
         </div>
         <!-- /.modal-content -->
@@ -236,7 +288,7 @@
 
 @section scripts {
     <script>
-       
+
         $(document).ready(function () {
 
         // Recibe los parámetros del Controller
@@ -264,7 +316,7 @@
             $('#confirmPass').val('');
         });
 
-       
+
 
         $('#myModal').on('shown.bs.modal', function () {
             $('#pass').val('');
@@ -274,7 +326,7 @@
 
     <script>
 
-        
+
         $("#pass").on("keyup paste", function () {
             limpiarErrores();
             validarClave();
@@ -284,7 +336,7 @@
             validarClave();
         });
 
-        
+
 
         function validarClave() {
 
@@ -359,7 +411,7 @@
 
         $('#btnCambiarClave').click(function () {
 
-      
+
             var data = {
                 id: '@UsuarioLogueado.Id',
                 pass: $('#pass').val().trim(),
@@ -388,6 +440,41 @@
                 }
             })
         }
+    </script>
+
+
+    <script>
+        var id = '@Model.Id';
+        function quitarFoto() {
+            Swal.fire({
+                title: 'Estás seguro?',
+                text: "Se eliminará la imagen perfil este usuario.",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, quítala!',
+                cancelButtonText: 'Cancelar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        type: "POST",
+                        url: '/Usuario/DeleteImage',
+                        data: { 'id': id },
+                        success: function (data) {
+
+                            location.reload();
+                        },
+                        error: function (xhr, status, error) {
+                            location.reload();
+                        }
+                    })
+
+
+                }
+            })
+        }
+        
     </script>
 }
 
