--- a/Web/Views/Error/Default.cshtml
+++ b/Web/Views/Error/Default.cshtml
@@ -1,17 +1,59 @@
 ﻿
-@{
-    ViewBag.Title = "Error";
-}
+@{ ViewBag.Title = "Error"; }
 
-<h2>Error</h2>
+
+<br>
+
+<!-- Content Header (Page header) -->
+<div class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a href="@Url.Action("Index","Home")">Inicio</a></li>
+                    <li class="breadcrumb-item active">Error</li>
+                </ol>
+            </div><!-- /.col -->
+        </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+</div>
+
 
 @if (TempData["Message"] != null)
 {
     String mensaje = "<div class=\"alert  alert-danger\" role=\"alert\">" + TempData["Message"] + " </div>";
-    @Html.Raw(mensaje);
+@Html.Raw(mensaje);
 }
-<br>
-<input type="button" value="Volver" class="btn btn-default" onclick="goBack()" />
+
+
+
+
+<section class="content">
+    <div class="error-page">
+        <h2 class="headline text-danger"> 500</h2>
+
+        <div class="error-content">
+            <h3><i class="fas fa-exclamation-triangle text-danger"></i> Ups! Algo salió mal :(</h3>
+
+            <p>
+                El servidor tuvo algún problema al procesar tu solicitud.
+                Le pedimos nuestra más sinceras disculpas.
+            </p>
+            <br />
+            <br />
+
+            <a class="btn btn-secondary" onclick="goBack()">
+                <i class="fas fa-arrow-alt-circle-left">    Volver</i>
+            </a>
+
+        </div>
+        <!-- /.error-content -->
+    </div>
+    <!-- /.error-page -->
+</section>
 
 
 <script>
